[gd_scene load_steps=49 format=2]

[ext_resource path="res://OgreAnimation.gd" type="Script" id=1]
[ext_resource path="res://Ogre.gd" type="Script" id=2]
[ext_resource path="res://sprites/npc/ogre/ogre_angryidle.png" type="Texture" id=3]
[ext_resource path="res://sprites/npc/ogre/ogre_idle.png" type="Texture" id=4]
[ext_resource path="res://sprites/npc/ogre/ogre_attack.png" type="Texture" id=5]
[ext_resource path="res://sprites/npc/ogre/ogre_death.png" type="Texture" id=6]
[ext_resource path="res://sprites/npc/ogre/ogre_stunned.png" type="Texture" id=7]
[ext_resource path="res://audio/Enemy/Ogre/hit.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/Enemy/Ogre/death.wav" type="AudioStream" id=9]
[ext_resource path="res://sprites/npc/evil_mini_healthbar.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 6 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 6 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": false,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": false,
"name": "attack",
"speed": 30.0
}, {
"frames": [ SubResource( 52 ) ],
"loop": true,
"name": "stunned",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
} ]

[sub_resource type="CapsuleShape2D" id=48]
radius = 6.0

[sub_resource type="CircleShape2D" id=49]
radius = 355.508

[sub_resource type="RectangleShape2D" id=50]
extents = Vector2( 17, 8.5 )

[sub_resource type="CapsuleShape2D" id=51]
radius = 12.0
height = 8.0

[node name="Ogre" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "idle"
frame = 1
playing = true
flip_h = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 48 )

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="PlayerDetector" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource( 49 )

[node name="PunchBox" type="Area2D" parent="."]

[node name="DamageBox" type="CollisionShape2D" parent="PunchBox"]
position = Vector2( 0, 1.5 )
shape = SubResource( 50 )

[node name="HitBoxArea" type="Area2D" parent="."]

[node name="HitBox" type="CollisionShape2D" parent="HitBoxArea"]
shape = SubResource( 51 )

[node name="Health" type="Sprite" parent="."]
position = Vector2( 0, -20 )
texture = ExtResource( 10 )
hframes = 5
vframes = 5

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_PlayerDetection_body_exited"]
[connection signal="body_entered" from="PunchBox" to="AnimatedSprite" method="_on_PunchBox_body_entered"]
[connection signal="body_exited" from="PunchBox" to="AnimatedSprite" method="_on_PunchBox_body_exited"]
[connection signal="body_entered" from="HitBoxArea" to="." method="on_body_entered" binds= [ 20 ]]
